--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.application.name=JournalApp
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://myAtlasDBUser:skmamun000@myatlasclusteredu.zmk3wd2.mongodb.net/?appName=myAtlasClusterEDU
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
